# dronefleet

./: .gitignore  README.md  env.example  pyproject.toml  simple_mission.py
src/drone_control/: README.md  __init__.py  msp_telemetry.py  pymultiwii_telemetry.py
