[project]
name = "drone-control"
version = "0.1.0"
description = "Программа для управления дроном"
requires-python = ">=3.8"
dependencies = [
    "pyserial==3.5",
    "python-dotenv==1.0.0",
    "pymultiwii>=0.4.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drone_control"]

[tool.rye]
managed = true
dev-dependencies = [] 
